Fix icon alignment and related visual bugs

--- a/static/sass/_pattern_cve.scss
+++ b/static/sass/_pattern_cve.scss
@@ -1,165 +1,33 @@
 @mixin ubuntu-p-cve {
-  .cve-status-box,
-  .cve-status-box--highlight {
-    @extend .p-card;
-
-    margin-bottom: $sp-small;
-  }
-
-  .cve-status-box--highlight {
-    background-color: $color-brand;
-    border: none;
-    color: $color-x-light;
-  }
-
   .u-overflow-inherit {
     overflow-x: inherit !important;
   }
 
-  .cve-table-container {
-    @media only screen and (max-width: $breakpoint-small) {
-      display: block;
-      overflow-x: auto;
-      white-space: nowrap;
+  .cve-table {
+    thead {
+      th {
+        word-wrap: break-word;
+      }
+
+      tr {
+        border-bottom: 1px solid $color-mid-light;
+      }
+    }
+
+    tr:not(:first-child) {
+      border-top: 1px solid #d9d9d9;
+    }
+
+    td {
+      border-top: none !important;
+      position: relative;
+      word-wrap: break-word;
     }
   }
 
-  .cve-table thead th {
-    word-wrap: break-word;
-  }
-
-  .cve-table thead tr {
-    border-bottom: 1px solid $color-mid-light;
-
-  }
-
-  .cve-table td {
-    border-top: 1px solid $color-mid-light;
-    position: relative;
-    word-wrap: break-word;
-  }
-
-  .cve-table .icon-cve-info {
-    margin: 0;
-    position: absolute !important;
-    right: 0;
-    top: 6px;
-  }
-
-  .cve-table .icon-container__text {
-    width: 100%;
-  }
-
-  .cve-table .p-icon--information {
-    background-color: #fff;
-    opacity: 0.8;
-  }
-
-  .cve-tooltip {
-    background: #fff;
-    border: 1px solid #b0b0b0;
-    box-shadow: 0 0 3px #b0b0b0;
-    color: #111;
-    padding: 10px;
-    position: absolute;
-    top: 27px;
-    transform: translateX(-125px);
-    width: 272px;
-    z-index: 1;
-  }
-
-  .cve-table .icon-container__icon {
-    position: relative;
-  }
-
-  .cve-table .esm-info {
-    display: block;
-    float: left;
-    font-size: 0.6rem;
-    line-height: 0.7rem;
-    margin: 0;
-    padding: 0.2rem 0 0 0;
-    width: 100%;
-  }
-
-  .cve-tooltip .arrow-up {
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    height: 0;
-    left: calc(50% - 13px);
-    position: absolute;
-    width: 0;
-  }
-
-  .cve-tooltip .arrow-up.front {
-    border-bottom: 10px solid #fff;
-    top: -9px;
-  }
-
-  .cve-tooltip .arrow-up.back {
-    border-bottom: 10px solid #b0b0b0;
-    top: -10px;
-  }
-
-  .capitalize {
-    text-transform: capitalize;
-  }
-
-  .cve-color-strip {
-    border-bottom-style: solid;
-    border-bottom-width: 3px;
-    left: 0.5rem;
-    position: absolute;
-    top: -1px;
-    width: calc(100% - 0.5rem);
-  }
-
-  .cve-color-strip--dne {
-    @extend .cve-color-strip;
-
-    border-bottom-color: $color-mid-light;
-  }
-
-  .cve-color-strip--needs-triage {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #a6761d;
-  }
-
-  .cve-color-strip--not-affected {
-    @extend .cve-color-strip;
-
-    border-bottom-color: $color-mid-light;
-  }
-
-  .cve-color-strip--needed {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #e7298a;
-  }
-
-  .cve-color-strip--deferred {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #7570b3;
-  }
-
-  .cve-color-strip--ignored {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #d95f02;
-  }
-
-  .cve-color-strip--pending {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #1b9e77;
-  }
-
-  .cve-color-strip--released {
-    @extend .cve-color-strip;
-
-    border-bottom-color: #66a61e;
+  .p-tooltip__message.cve-chip {
+    width: 15rem;
+    text-wrap: wrap;
   }
 
   .cve-landing {
